--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0; padding: 0;
+    font-family: minion-pro, serif;
+}
 #scrollable {
     display: flex;
     align-content: center;
@@ -10,6 +14,13 @@
 
 #tutorial {
     display: none;
+}
+
+.toggle-wrapper{
+    width: 1130px;
+    margin: auto;
+    display: flex;
+    align-items: center;
 }
 
 .scorigami {
@@ -43,7 +54,7 @@
     font-weight: bold;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1200px) {
     .scorigami {
         font-size: 40px;
         margin-top: 5px;
@@ -61,6 +72,10 @@
     }
 
     .body-text {
+        width: 90%;
+    }
+
+    .toggle-wrapper{
         width: 90%;
     }
 
@@ -112,7 +127,70 @@
     }
 }
 
-* {
-    margin: 0; padding: 0;
-    font-family: minion-pro, serif;
+.counts-label{
+    margin-right: 3px;
+    font-family: 'franklin-gothic-urw-cond', 'sans-serif';
+    font-weight: bold;
+}
+/*slider styling*/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: orange;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px orange;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
