--- a/style.css
+++ b/style.css
@@ -50,6 +50,14 @@
     margin: auto;
 }
 
+.headline{
+    width: 1130px;
+}
+
+.article{
+    margin-top: 30px;
+}
+
 .tooltip-header {
     font-weight: bold;
 }
@@ -86,7 +94,7 @@
 
     #header {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 
     #tutorial {
